--- a/mandelbulber2/formula/ui/transf_add_cpixel_invert.ui
+++ b/mandelbulber2/formula/ui/transf_add_cpixel_invert.ui
@@ -508,7 +508,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;Adds Cpixel constant to z vector&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/aboxMod15cpixelInvert.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mbulbCpixelInvert.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
