--- a/mandelbulber2/formula/ui/iq_bulb.ui
+++ b/mandelbulber2/formula/ui/iq_bulb.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
+ <class>iq_bulb</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -140,7 +140,7 @@
 &lt;tr&gt;&lt;th&gt;Reference&lt;/th&gt;&lt;td&gt;&lt;a href=&quot;http://iquilezles.org/www/articles/mandelbulb/mandelbulb.htm&quot;&gt;http://iquilezles.org/www/articles/mandelbulb/mandelbulb.htm&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;iq_bulb_001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;iq_bulb_001.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS SphereGrid IQ.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
