--- a/mandelbulber2/formula/ui/mandelnest_v2.ui
+++ b/mandelbulber2/formula/ui/mandelnest_v2.ui
@@ -1113,7 +1113,7 @@
       <item>
        <widget class="QLabel" name="label_information_general">
         <property name="text">
-         <string notr="true">&lt;p&gt;Mandelnest by Jeannoc&lt;br&gt;https://fractalforums.org/share-a-fractal/22/mandelbrot-3d-mandelnest/4028/&lt;/p&gt;&lt;table&gt;
+         <string notr="true">&lt;p&gt;Mandelnest refer Jeannot&lt;br&gt;https://fractalforums.org/share-a-fractal/22/mandelbrot-3d-mandelnest/4028/&lt;br&gt;also https://www.shadertoy.com/view/4lKfzy&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
 &lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
