--- a/mandelbulber2/formula/ui/mandelbulb_sin_cos.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_sin_cos.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mandelbulb_sin_cos</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>763</width>
-    <height>1313</height>
+    <width>817</width>
+    <height>2104</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -635,7 +635,7 @@ mult:</string>
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="MyDoubleSpinBox" name="spinboxd_transf_scale_0">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_1">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
