--- a/mandelbulber2/formula/ui/mandelnest4d.ui
+++ b/mandelbulber2/formula/ui/mandelnest4d.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mandelnest4d</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>781</width>
-    <height>2490</height>
+    <width>835</width>
+    <height>2914</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -880,7 +880,7 @@
       </widget>
      </item>
      <item row="6" column="2">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledCw_false">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledw">
        <property name="text">
         <string notr="true">cos</string>
        </property>
